--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 
                 
                 <div class=modal-img>
-                    <img class = 'imgSlide' style = 'height:35%; width:auto' src = "./projects/ActionReplay/img/screenshots//00.jpg">
+                    <img class = 'imgSlide' src = "./projects/ActionReplay/img/screenshots//00.jpg">
                     <img class = 'imgSlide' src = "./projects/ActionReplay/img/screenshots/01.jpg">
                     <img class = 'imgSlide' src = "./projects/ActionReplay/img/screenshots/02.jpg">
                     <img class = 'imgSlide' src = "./projects/ActionReplay/img/screenshots/03.jpg">
