--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 
             <p id='download-bar'> 
 <!-- METTRE A JOUR LIENS-->
-                <a class="link" target="_blank" href="releases/download/ActionReplay_Windows_1.0.zip"> WINDOWS </a> 
-                <a class="link" target="_blank" href="releases/download/ActionReplay_Mac_1.0.zip"> MAC </a> 
-                <a class="link" target="_blank" href="releases/download/ActionReplay_Rift_1.0.zip"> RIFT (VR) </a>
-                <a class="link" target="_blank" href="releases/download/ActionReplay_Vive_1.0.zip"> VIVE (VR) </a>
+                <a class="link" target="_blank" href="releases/download/V1.0/ActionReplay_Windows_1.0.zip"> WINDOWS </a> 
+                <a class="link" target="_blank" href="releases/download/V1.0/ActionReplay_Mac_1.0.zip"> MAC </a> 
+                <a class="link" target="_blank" href="releases/download/V1.0/ActionReplay_Rift_1.0.zip"> RIFT (VR) </a>
+                <a class="link" target="_blank" href="releases/download/V1.0/ActionReplay_Vive_1.0.zip"> VIVE (VR) </a>
             </p>                                
 
 
