--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                 
 
             <p id='download-bar'> 
-                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip" onclick="trackOutboundLink('https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip'); return false;"> WINDOWS </a> 
-                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip" onclick="trackOutboundLink('https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip'); return false;"> MAC </a> 
-                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip" onclick="trackOutboundLink('https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip'); return false;"> RIFT (VR) </a>
-                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip" onclick="trackOutboundLink('https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip'); return false;"> VIVE (VR) </a>
+                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip); return false;"> WINDOWS </a> 
+                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip); return false;"> MAC </a> 
+                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip); return false;"> RIFT (VR) </a>
+                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip); return false;"> VIVE (VR) </a>
             </p>                                
 
 
