--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 
 
             <p id='download-bar'> 
-                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip"> WINDOWS </a> 
+                <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Windows_1.0.zip);"> WINDOWS </a> 
                 <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Mac_1.0.zip);"> MAC </a> 
                 <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Rift_1.0.zip);"> RIFT (VR) </a>
                 <a class="link" target="_blank" href="https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip" onclick="trackOutboundLink(https://github.com/GRIIG/IntoTheVoid/releases/download/V1.0/ActionReplay_Vive_1.0.zip);"> VIVE (VR) </a>
