--- a/projects/Interbeings/interbeings-track4.html
+++ b/projects/Interbeings/interbeings-track4.html
@@ -16,7 +16,7 @@
     
     
     <title>INTERBEINGS</title>
-    <link rel="icon" href="../../img/greencircle.png">
+    <link rel="icon" type="image/png" href="../../img/greencircle.png">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./interbeings.css">
 
@@ -45,8 +45,7 @@
           <source src="" type="video/mp4">
         </video>
         <div>
-            <a class="real-link" href='./interbeings-track5.html'>
-                <div class="next-track-link">.</div>
+            <a class="next-track-link" href='./interbeings-track5.html'> >
             </a>
         </div>
         <div class="soundcloud-extract">
