--- a/projects/about/about.html
+++ b/projects/about/about.html
@@ -14,7 +14,7 @@
   
     
     <title>ABOUT</title>
-    <link rel="icon" href="../../img/greencircle.png">
+    <link rel="icon" type="image/png" href="../../img/greencircle.png">
     <meta charset="utf-8">
     
     <link rel="stylesheet" href="../../style/menu.css">
