--- a/projects/Interbeings/interbeings-track5.html
+++ b/projects/Interbeings/interbeings-track5.html
@@ -16,7 +16,7 @@
     
     
     <title>INTERBEINGS</title>
-    <link rel="icon" href="../../img/greencircle.png">
+    <link rel="icon" type="image/png" href="../../img/greencircle.png">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./interbeings.css">
 
@@ -45,9 +45,7 @@
           <source src="" type="video/mp4">
         </video>
         <div>
-            <a class="real-link" href='./Interbeings.html'>
-                <div class="next-track-link">.</div>
-            </a>
+            <a class="next-track-link" href='./Interbeings.html'> > </a>
         </div>
         <div class="soundcloud-extract">
             <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/589543938&color=%23000000&inverse=true&auto_play=true&show_user=true"></iframe>
