--- a/projects/Interbeings/Interbeings.html
+++ b/projects/Interbeings/Interbeings.html
@@ -77,9 +77,9 @@
         <br>
         <br>
         <br>
-        <a class="link" href="./interbeings-track1.html">ENTER</a>
-        <a class='link' target="_blank" href="https://soundcloud.com/club-late-music">LISTEN </a>   
-        <a class='link' target="_blank" href="https://clublatemusic.bandcamp.com/">DOWNLOAD </a>    
+        <a class="link" href="./interbeings-track1.html">VISIT</a>
+        <a class='link' target="_blank" href="https://soundcloud.com/club-late-music/sets/gun-united01-interbeings">LISTEN </a>   
+        <a class='link' target="_blank" href="https://clublatemusic.bandcamp.com/album/gun-united-01-interbeings">DOWNLOAD </a>    
     </div>
     
 </body>    
