--- a/projects/Interbeings/interbeings-track4.html
+++ b/projects/Interbeings/interbeings-track4.html
@@ -54,7 +54,7 @@
     </div>
     <div class="text-over-video">
         <h3>Object-Oriented Habitat <br> with NEW FEAR</h3>
-        <p>The Whole exists across dimensions and materialities, flattening scales and temporalities. The sharing of a common purpose among each constitutive part of its ecosystem is the base of consistent evolution. The management, protection and sharing of its resources serve the long-term interest of its parts, may they be sentient or not. We shall prevent the destruction of what we value if we are to promote the creation of what we want.</p>
+        <p>The Whole exists across dimensions and materialities, flattening scales and temporalities. The sharing of a common purpose among each constitutive part of its ecosystem is the base of consistent evolution. The management, protection and sharing of its resources serve the long-term interest of its parts, may they be sentient or not. Only by preventing the destruction of what is valued in our own habitat will we be able promote the creation of what we want.</p>
 
     </div>
     
