--- a/projects/Interbeings/interbeings-track5.html
+++ b/projects/Interbeings/interbeings-track5.html
@@ -53,7 +53,7 @@
     </div>
     <div class="text-over-video">
         <h3>Subjects of Sharing (Bathing in Light) <br> with WHORLTOOTH</h3>
-        <p>Knowledge soothes the incompleteness of the individual by opening up potentialities. It allows us to define new baselines of thinking. Illuminating minds, its propagation is heightened in transparency. Transmission, refraction and exchange through cooperations and interactions accelerate its enlightening capabilities. The Whole thrives in a pool of wisdom, filled with light by the generous sharing of our experiences. Only by being fully immersed shall we merge and experience higher sensitive environments.</p>
+        <p>Knowledge soothes the incompleteness of the individual by opening up potentialities. It allows us to define new baselines of thinking. Illuminating minds, its propagation is heightened in transparency. Transmission, refraction and exchange through cooperations and interactions accelerate its enlightening capabilities. The Whole thrives in a pool of wisdom, filled with light by the generous sharing of our experiences. Fully immersed, we will be able to merge and experience higher sensitive environments.</p>
 
     </div>
     
