--- a/projects/about/about.html
+++ b/projects/about/about.html
@@ -75,7 +75,7 @@
     
     
     <div id = contact>
-        <p> griig.contact (at) gmail.com </p>
+        <p> griigg.contact (at) gmail.com </p>
         <p> <a class='link' target="_blank" href="https://www.instagram.com/griigg/"> instagram </a> </p>
         <p> <a class='link' target="_blank" href="https://soundcloud.com/griigg"> soundcloud </a> </p>
         <p> <a class='link' target="_blank"  href="https://www.facebook.com/GRIIGG"> facebook </a> </p>
